tests/macros/raw_select/extension.stderr
error: option `extension` does not exist for kind `raw_select`
 --> $DIR/extension.rs:2:49
  |
2 |     let q = inquisition::questions![RawSelect { extension: todo!() }];
  |                                                 ^^^^^^^^^
