tests/macros/raw_select/extension.rs
fn main() {
    let q = inquisition::questions![RawSelect { extension: todo!() }];
}
